--- a/client/src/styles/home.scss
+++ b/client/src/styles/home.scss
@@ -5,19 +5,88 @@ body {
 }
 
 .home {
-    margin-top: 7em;
+    margin-top: 4.5em;
     background: #ffffff;
     font-family: 'Poppins', sans-serif;
 
-    
     header {
         width: 100%;
         height: auto;
         
+        .head-slide-container {
+            position: relative;
+            width: 100%;
+            height: 60vh;
+            overflow: hidden;
+
+            .slider {
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 400%;
+                height: 100%;
+                float: left;
+                animation: slide 20s linear infinite;
+
+                .slide {
+                    position: relative;
+                    width: 25%;
+                    height: 100%;
+                    float: left;
+
+                    &.slide1 {
+                        background: url('../cos-img/hand.jpg');
+                        background-size: cover;
+                    }
+                    &.slide2 {
+                        background: url('../cos-img/lipstick.jpg');
+                        background-size: cover;
+                    }
+                    &.slide3 {
+                        background: url('../cos-img/woman.jpg');
+                        background-size: cover;
+                    }
+                    .caption {
+                        position: absolute;
+                        bottom: 60px;
+                        left: 60px;
+                        right: 60px;
+                        padding: 30px;
+                        background: rgba(0, 0, 0, .5);
+                        box-sizing: border-box;
+
+                        h2 {
+                            margin: 0 0 20px;
+                            padding: 0;
+                            color: #fff;
+                            font-size: 48px;
+                        }
+                        p {
+                            margin: 0;
+                            padding: 0;
+                            color: #fff;
+                            font-size: 18px;
+                        }
+                    }
+                }
+            }
+            @keyframes slide {
+                0% {left: 0;}
+                25% {left: 0;}
+                30% {left: -100%;}
+                55% {left: -100%;}
+                60% {left: -200%;}
+                85% {left: -200%;}
+                95% {left: -200%;}
+                100% {left: -300%;}
+            }
+        }
+
         .head-intro {
             display: flex;
             justify-content: space-between;
             align-items: center;
+            background-color: rgb(253, 253, 253);
 
             .square {
                 height: 400px;
@@ -89,42 +158,163 @@ body {
                 display: flex;
                 justify-content: center;
                 align-items: center;
-                height: 100vh;
-                background: rgba(76, 0, 130, 0.315);
+                height: auto;
 
-                .pre, 
+                .pre,
                 .next {
-                    display: block;
-                    width: 120px;
-                    height: 120px;
-                    border-radius: 20em 0 20em 0;
-                    border: 0;
-                    background: indigo;
-                }
-                .card {
-                    position: relative;
-                    background: rgb(243, 243, 243);
-                    width: 85%;
-                    height: 500px;
+                    width: 220px;
+                    height: 150px;
+                    border: none;
+                    background-color: rgb(194, 59, 149);
+                    outline: none;
+                    color: rgb(255, 255, 255);
+                    font-size: 3.5em;
+                    transition: 1s ease;
 
-                    .slider-text {
-                        position: relative;
-
+                    &:hover {
+                        background-color: rgb(116, 8, 83);
+                        cursor: pointer;
                     }
-                    .content {
+                }
+                .pre {border-radius: 10em 0 10em 0;}
+                .next {border-radius: 0 10em 0 10em;}
+                .slide {
+                    width: 100%;
 
-                        a {
-                            display: inline-block;
-                            
+                    .slide-item{
+                        width: 100%;
+                        height: auto;
+                        overflow: hidden;
+
+                        img { 
+                            width: 100%;
+                            background-size: contain;
+                        }
+                        p {
+                            position: absolute;
+                            padding: 1.5em;
+                            font-size: 1.8em;
+                            background: white;
+                            color: #222;
+                        }
+                        .pallete-text {
+                            top: 0;
+                            left: 0;
+                            border-radius: 0 0 5em 0;
+                        }
+                        .red-lipstick {
+                            top: 0;
+                            left: 0;
+                            border-radius: 2em 5em 2em 3px;
+                            color: rgb(189, 18, 18);
+                        }
+                        .varni {
+                            top: 0;
+                            left: 12%;
+                            border-radius: 10em 0 10em 6px;
+                            span {color: rgb(161, 7, 136);}
+                        }
+                        .perf {
+                            top: 0;
+                            right: 0;
+                            border-radius: 2em 0 10em 9em;
+                            span {color: rgb(50, 81, 223);}
+                            font-size: 1.6em;
+                        }
+                        .drayer {
+                            top: 0;
+                            left: 17%;
+                            font-size: 1.4em;
+                            border-radius: 0 0 3em 3em;
+                            color: rgb(71, 189, 130);
                         }
                     }
                 }
             }
 
-            .undefined-section {
+            .whats-new-section {
                 width: 100%;
-                height: 90vh;
-                background-color: rgb(245, 201, 201);
+                height: auto;
+
+                h2 {
+                    text-align: center;
+                    font-weight: 100;
+                    font-size: 1.7em;
+                    margin: 10vh 0;
+
+                    &:before,
+                    &:after {
+                        content: "";
+                        width: 30%;
+                        height: 1px;
+                        background-color: #666;
+                        position: absolute;
+                        margin-top: 3.3vh;
+                    }
+                    &:before {left: 7%;}
+                    &:after {right: 7%;}
+                }
+                .new-products {
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+
+                    button {
+                        font-size: 4em;
+                        background: transparent;
+                        border: 0;
+                        color: rgb(0, 0, 0);
+
+                        &:hover {
+                            cursor: pointer;
+                            color: rgb(95, 7, 43);
+                        }
+                    }
+                    .products-slide {
+                        display: flex;
+                        justify-content: space-evenly;
+                        align-items: center;
+                        flex-wrap: wrap;
+                        text-align: center;
+
+                        .product-item {
+                            display: inline-block;
+                            text-align: center;
+                            width: 280px;
+
+                            a {
+                                color: black;
+                                text-decoration: none;
+                                
+                                h5 {
+                                    border: 1px solid;
+                                    position: absolute;
+                                    margin: 2px 5px;
+                                    padding: 3px 7px;
+                                    color: rgb(15, 103, 235);
+                                }
+                                img {
+                                    width: 50%;
+                                }
+                                .text {
+                                    width: 80%;
+                                    display: inline-block;
+                                    
+        
+                                    span {
+                                        display: block;
+                                        font-size: 14px;
+                                        color: rgb(32, 29, 29);
+                                    }
+                                    p {
+                                        font-size: 18px;
+                                        text-shadow: 0px 0px 1px black;
+                                    }
+                                }
+                            }
+                        }  
+                    }
+                }
             }
             
         } 
