--- a/client/src/styles/home.scss
+++ b/client/src/styles/home.scss
@@ -37,14 +37,17 @@ body {
                     &.slide1 {
                         background: url('../cos-img/hand.jpg');
                         background-size: cover;
+                        background-position: center;
                     }
                     &.slide2 {
                         background: url('../cos-img/lipstick.jpg');
                         background-size: cover;
+                        background-position: center;
                     }
                     &.slide3 {
                         background: url('../cos-img/woman.jpg');
                         background-size: cover;
+                        background-position: center;
                     }
                     .caption {
                         position: absolute;
@@ -159,6 +162,7 @@ body {
                 justify-content: center;
                 align-items: center;
                 height: auto;
+                margin-top: 7vh;
 
                 .pre,
                 .next {
@@ -240,7 +244,7 @@ body {
                     text-align: center;
                     font-weight: 100;
                     font-size: 1.7em;
-                    margin: 10vh 0;
+                    margin-bottom: 10vh;
 
                     &:before,
                     &:after {
