--- a/client/src/styles/home.scss
+++ b/client/src/styles/home.scss
@@ -286,7 +286,7 @@ body {
                             text-align: center;
                             width: 280px;
 
-                            a {
+                            .detail {
                                 color: black;
                                 text-decoration: none;
                                 
@@ -299,10 +299,13 @@ body {
                                 }
                                 img {
                                     width: 50%;
+                                    height: 160px;
+                                    object-fit: cover;
                                 }
                                 .text {
                                     width: 80%;
                                     display: inline-block;
+                                    height: 160px;
                                     
         
                                     span {
@@ -315,6 +318,11 @@ body {
                                         text-shadow: 0px 0px 1px black;
                                     }
                                 }
+                            }
+                            .price {
+                                border: 1px solid rgb(44, 189, 0);
+                                color: rgb(57, 156, 0);
+                                letter-spacing: 2px;
                             }
                         }  
                     }
