--- a/client/src/styles/home.scss
+++ b/client/src/styles/home.scss
@@ -26,7 +26,7 @@ body {
                 width: 400%;
                 height: 100%;
                 float: left;
-                animation: slide 20s linear infinite;
+                animation: slide 15s linear infinite;
 
                 .slide {
                     position: relative;
@@ -162,7 +162,7 @@ body {
                 justify-content: center;
                 align-items: center;
                 height: auto;
-                margin-top: 7vh;
+                margin-top: 3%;
 
                 .pre,
                 .next {
@@ -193,10 +193,12 @@ body {
                         img { 
                             width: 100%;
                             background-size: contain;
+                            height: 85vh;
+                            object-fit: cover;
                         }
                         p {
                             position: absolute;
-                            padding: 1.5em;
+                            padding: 1em;
                             font-size: 1.8em;
                             background: white;
                             color: #222;
@@ -205,6 +207,7 @@ body {
                             top: 0;
                             left: 0;
                             border-radius: 0 0 5em 0;
+                            padding: .5em;
                         }
                         .red-lipstick {
                             top: 0;
@@ -227,7 +230,7 @@ body {
                         }
                         .drayer {
                             top: 0;
-                            left: 17%;
+                            right: 0;
                             font-size: 1.4em;
                             border-radius: 0 0 3em 3em;
                             color: rgb(71, 189, 130);
@@ -239,6 +242,7 @@ body {
             .whats-new-section {
                 width: 100%;
                 height: auto;
+                margin-top: 3%;
 
                 h2 {
                     text-align: center;
@@ -328,7 +332,7 @@ body {
                     }
                 }
             }
-            
+ 
         } 
     }
 
