--- a/client/src/styles/navbar.css
+++ b/client/src/styles/navbar.css
@@ -77,7 +77,7 @@
   color: white;
 }
 
-.navbar-container header nav ul li a {
+.navbar-container header nav ul li .link {
   height: 50px;
   line-height: 40px;
   padding: 6px 8px;
@@ -91,7 +91,7 @@
   transition: .5s ease;
 }
 
-.navbar-container header nav ul li a:hover {
+.navbar-container header nav ul li .link:hover {
   -webkit-box-shadow: -2px 2px 4px #a3a3a3;
           box-shadow: -2px 2px 4px #a3a3a3;
   cursor: pointer;
@@ -146,12 +146,12 @@
   border-radius: 12px 0 12px 0;
 }
 
-.navbar-container header .shopping-cart a {
+.navbar-container header .shopping-cart .link {
   color: #fda2ae;
   display: block;
 }
 
-.navbar-container header .shopping-cart a .fa {
+.navbar-container header .shopping-cart .link .fa {
   font-size: 1.8em;
   margin-top: 12px;
 }
@@ -194,7 +194,7 @@
   display: none;
 }
 
-@media (max-width: 850px) {
+@media (max-width: 900px) {
   .navbar-container header {
     padding: 0 20px;
   }
@@ -249,12 +249,12 @@
     border-bottom: 1px solid rgba(255, 80, 226, 0.1);
     margin-top: 5%;
   }
-  .navbar-container header nav ul li a {
+  .navbar-container header nav ul li .link {
     border-radius: 0;
     -webkit-box-shadow: 0 0 0;
             box-shadow: 0 0 0;
   }
-  .navbar-container header nav ul li a:hover {
+  .navbar-container header nav ul li .link:hover {
     -webkit-box-shadow: 0 0 0;
             box-shadow: 0 0 0;
   }
