--- a/client/src/styles/product-list-item.scss
+++ b/client/src/styles/product-list-item.scss
@@ -3,14 +3,14 @@
     margin-top: 5em;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 
-    .products {
+    .product {
         display: flex;
         justify-content: center;
         align-items: center;
         flex-wrap: wrap;
         background-color: rgb(231, 216, 216);
 
-        .product {
+        .product-item {
             width: 27%;
         }
     }
