--- a/client/src/styles/home/home.css
+++ b/client/src/styles/home/home.css
@@ -4,7 +4,7 @@ body {
 }
 
 .home {
-  margin-top: 4.5em;
+  margin-top: 5em;
   background: #ffffff;
   font-family: 'Poppins', sans-serif;
 }
@@ -40,19 +40,19 @@ body {
 }
 
 .home header .head-slide-container .slider .slide.slide1 {
-  background: url("../cos-img/hand.jpg");
+  background: url("../../cos-img/hand.jpg");
   background-size: cover;
   background-position: center;
 }
 
 .home header .head-slide-container .slider .slide.slide2 {
-  background: url("../cos-img/lipstick.jpg");
+  background: url("../../cos-img/lipstick.jpg");
   background-size: cover;
   background-position: center;
 }
 
 .home header .head-slide-container .slider .slide.slide3 {
-  background: url("../cos-img/woman.jpg");
+  background: url("../../cos-img/woman.jpg");
   background-size: cover;
   background-position: center;
 }
