--- a/client/src/styles/navbar/navbar.css
+++ b/client/src/styles/navbar/navbar.css
@@ -32,8 +32,9 @@
   background-color: white;
 }
 
-.navbar-container header .logo {
+.navbar-container header .logo a {
   color: #ce0000;
+  text-decoration: none;
   text-shadow: 1px 1px 1px #555454;
   height: 50px;
   line-height: 50px;
@@ -44,7 +45,7 @@
   margin-top: 12px;
 }
 
-.navbar-container header .logo span {
+.navbar-container header .logo a span {
   color: #24a9ca;
 }
 
@@ -100,7 +101,7 @@
 .navbar-container header nav ul li ul {
   position: absolute;
   display: block;
-  left: -75%;
+  left: 0;
   opacity: 0;
   visibility: hidden;
   -webkit-transition: .6s ease;
@@ -109,7 +110,6 @@
 
 .navbar-container header nav ul li ul li {
   display: block;
-  width: 200px;
   margin: 0;
 }
 
@@ -196,12 +196,12 @@
 
 @media (max-width: 900px) {
   .navbar-container header {
-    padding: 0 20px;
+    padding: 3px 20px !important;
   }
   .navbar-container header .menu-lines {
     display: block;
   }
-  .navbar-container header .logo {
+  .navbar-container header .logo a {
     float: none;
     line-height: 35px;
     height: 45px;
@@ -222,9 +222,9 @@
   .navbar-container header nav {
     position: fixed;
     width: 100%;
-    height: calc(100vh - 75px);
+    height: calc(100vh - 60px);
     background: white;
-    top: 75px;
+    top: 60px;
     left: -100%;
     -webkit-transition: .5s;
     transition: .5s;
