--- a/client/src/styles/navbar/navbar.css
+++ b/client/src/styles/navbar/navbar.css
@@ -16,9 +16,14 @@
   background: #4e0120;
 }
 
+body.hide {
+  overflow-y: hidden !important;
+}
+
 .navbar-container {
   overflow-x: hidden;
   font-family: 'Poppins', sans-serif;
+  z-index: 99;
 }
 
 .navbar-container header {
@@ -26,13 +31,13 @@
   z-index: 99;
   top: 0;
   left: 0;
-  padding: 0 100px;
+  padding: 0 100px 0 30px;
   width: 100%;
   text-align: center;
   background-color: white;
 }
 
-.navbar-container header .logo a {
+.navbar-container header .logo .link {
   color: #ce0000;
   text-decoration: none;
   text-shadow: 1px 1px 1px #555454;
@@ -42,15 +47,16 @@
   font-weight: bold;
   letter-spacing: 3px;
   float: left;
-  margin-top: 12px;
+  margin-top: 8px;
+  margin-right: 25px;
 }
 
-.navbar-container header .logo a span {
+.navbar-container header .logo .link span {
   color: #24a9ca;
 }
 
 .navbar-container header nav {
-  display: inline-block;
+  display: block;
   margin-top: 10px;
 }
 
@@ -60,6 +66,8 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 .navbar-container header nav ul li {
@@ -71,8 +79,8 @@
 
 .navbar-container header nav ul li .fas {
   position: absolute;
-  bottom: -10%;
-  right: 40%;
+  bottom: -12%;
+  right: 45%;
   font-size: 1.4em;
   text-shadow: 0 1px 6px #6e0454;
   color: white;
@@ -81,7 +89,8 @@
 .navbar-container header nav ul li .link {
   height: 50px;
   line-height: 40px;
-  padding: 6px 8px;
+  padding: 5px 7px;
+  border: 1px solid rgba(201, 201, 201, 0.5);
   color: black;
   background-color: white;
   text-decoration: none;
@@ -104,13 +113,19 @@
   left: 0;
   opacity: 0;
   visibility: hidden;
-  -webkit-transition: .6s ease;
-  transition: .6s ease;
 }
 
 .navbar-container header nav ul li ul li {
   display: block;
   margin: 0;
+  z-index: 3;
+  background-color: white;
+}
+
+.navbar-container header nav ul li ul li .link {
+  -webkit-box-shadow: 0 0 1px;
+          box-shadow: 0 0 1px;
+  border: 0;
 }
 
 .navbar-container header nav ul li:hover ul {
@@ -119,10 +134,12 @@
 }
 
 .navbar-container header .shopping-cart {
-  float: right;
   height: 50px;
   line-height: 50px;
   margin-top: 12px;
+  position: absolute;
+  right: 2%;
+  top: 5%;
 }
 
 .navbar-container header .shopping-cart .quantity {
@@ -194,23 +211,26 @@
   display: none;
 }
 
-@media (max-width: 900px) {
+@media (max-width: 1000px) {
   .navbar-container header {
-    padding: 3px 20px !important;
+    padding: 0 100px !important;
   }
   .navbar-container header .menu-lines {
     display: block;
   }
-  .navbar-container header .logo a {
+  .navbar-container header .logo .link {
     float: none;
     line-height: 35px;
     height: 45px;
+    margin: 0 !important;
   }
   .navbar-container header .shopping-cart {
-    float: none;
-    margin: 0;
+    position: relative;
+    margin: 5px 0 0 0;
     line-height: 25px;
     height: 35px;
+    background-color: white;
+    border-bottom: 1px solid #fc9dcc;
   }
   .navbar-container header .shopping-cart .quantity {
     display: inline !important;
@@ -222,9 +242,10 @@
   .navbar-container header nav {
     position: fixed;
     width: 100%;
-    height: calc(100vh - 60px);
+    overflow-y: scroll;
+    height: 100%;
     background: white;
-    top: 60px;
+    margin-top: 25px;
     left: -100%;
     -webkit-transition: .5s;
     transition: .5s;
