--- a/client/src/styles/navbar/navbar.scss
+++ b/client/src/styles/navbar/navbar.scss
@@ -10,22 +10,24 @@
     background: rgb(78, 1, 32);
   }
 
+body.hide {overflow-y: hidden !important;}
 
 .navbar-container {
     overflow-x: hidden;
     font-family: 'Poppins', sans-serif;
+    z-index: 99;
     
     header {
         position: fixed;
         z-index: 99;
         top: 0;
         left: 0;
-        padding: 0 100px;
+        padding: 0 100px 0 30px;
         width: 100%;
         text-align: center;
-        background-color: white;
+        background-color: rgb(255, 255, 255);
 
-        .logo a {
+        .logo .link {
             color: rgb(206, 0, 0);
             text-decoration: none;
             text-shadow: 1px 1px 1px rgb(85, 84, 84);
@@ -36,16 +38,18 @@
             font-weight: bold;
             letter-spacing: 3px;
             float: left;
-            margin-top: 12px;
+            margin-top: 8px;
+            margin-right: 25px;
         }
         nav {
-            display: inline-block;
+            display: block;
             margin-top: 10px;
 
             ul {
                 margin: 0;
                 padding: 0;
                 display: flex;
+                flex-wrap: wrap;
 
                 li {
                     list-style: none;
@@ -55,8 +59,8 @@
                     
                     .fas { 
                         position: absolute;
-                        bottom: -10%;
-                        right: 40%;
+                        bottom: -12%;
+                        right: 45%;
                         font-size: 1.4em;
                         text-shadow: 0 1px 6px rgb(110, 4, 84);
                         color: rgb(255, 255, 255);
@@ -64,7 +68,8 @@
                     .link {
                         height: 50px;
                         line-height: 40px;
-                        padding: 6px 8px;
+                        padding: 5px 7px;
+                        border: 1px solid rgba(201, 201, 201, 0.5);
                         color: rgb(0, 0, 0);
                         background-color: rgb(255, 255, 255);
                         text-decoration: none;
@@ -83,11 +88,17 @@
                         left: 0;
                         opacity: 0;
                         visibility: hidden;
-                        transition: .6s ease;
                         
                         li {
                             display: block;
                             margin: 0;
+                            z-index: 3;
+                            background-color: white;
+
+                            .link {
+                                box-shadow: 0 0 1px; 
+                                border: 0;
+                            }
                         }
                     }
                     &:hover ul{
@@ -98,10 +109,12 @@
             }
         }
         .shopping-cart {
-            float: right;
             height: 50px;
             line-height: 50px;
             margin-top: 12px;
+            position: absolute;
+            right: 2%;
+            top: 5%;
 
             .quantity {
                 position: absolute;
@@ -157,23 +170,27 @@
     }
 
 
-    @media (max-width: 900px) {
+    @media (max-width: 1000px) {
+        
         header {
-            padding: 3px 20px !important;
+            padding: 0 100px !important;
 
             .menu-lines {
                 display: block;
             }
-            .logo a {
+            .logo .link {
                 float: none;
                 line-height: 35px;
                 height: 45px;
+                margin: 0 !important;
             }
             .shopping-cart {
-                float: none;
-                margin: 0;
+                position: relative;
+                margin: 5px 0 0 0;
                 line-height: 25px;
                 height: 35px;
+                background-color: white;
+                border-bottom: 1px solid rgb(252, 157, 204);
 
                 .quantity {
                     display: inline !important;
@@ -186,9 +203,11 @@
             nav {
                 position: fixed;
                 width: 100%;
-                height: calc(100vh - 60px);
+                overflow-y: scroll;
+                height: 100%;
                 background: rgb(255, 255, 255);
-                top: 60px;
+                margin-top: 25px;
+               
                 left: -100%;
                 transition: .5s;
 
@@ -200,6 +219,7 @@
                     background-color: rgb(255, 255, 255);
                     display: block;
                     left: 0;
+
                     li{
                         margin-top: 2px;
                         border-radius: 110px;
